ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /one/
        pathType: Prefix
        backend:
          service:
            name: test-first
            port:
              number: 8080
      - path: /two/
        pathType: Prefix
        backend:
          service:
            name: test-second
            port:
              number: 8080
